--- a/FoodPin/Storyboard/Base.lproj/Main.storyboard
+++ b/FoodPin/Storyboard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ctq-4V-tXe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ctq-4V-tXe">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17502"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -91,7 +91,7 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="deviceCell" rowHeight="151" id="JHu-De-kWA" customClass="DeviceCollectionViewCell" customModule="FoodPin" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="deviceCell" rowHeight="151" id="JHu-De-kWA" customClass="DeviceTableViewCell" customModule="FoodPin" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="151"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JHu-De-kWA" id="PNg-Nq-bMM">
@@ -119,7 +119,7 @@
                                                                 <rect key="frame" x="8" y="10" width="141" height="126"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <connections>
-                                                                    <action selector="deviceButtonTappedWithSender:" destination="TVL-f6-mGp" eventType="touchUpInside" id="ZmA-7z-bfa"/>
+                                                                    <action selector="deviceButtonTappedWithSender:" destination="TVL-f6-mGp" eventType="touchUpInside" id="9yW-LA-VWq"/>
                                                                 </connections>
                                                             </button>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="19l-fz-wx3">
@@ -158,17 +158,12 @@
                                                     </collectionViewCellContentView>
                                                     <size key="customSize" width="157" height="155"/>
                                                     <connections>
-                                                        <outlet property="DeviceImageView" destination="lnr-Ob-JH3" id="yLS-S9-iL5"/>
-                                                        <outlet property="DeviceType" destination="Zan-pj-5Tk" id="E7q-Ut-LOO"/>
-                                                        <outlet property="collectionView" destination="lFq-HO-fa7" id="TYs-YV-EXf"/>
-                                                        <outlet property="deviceClickButton" destination="HHZ-OX-TER" id="Pdv-WT-7vV"/>
+                                                        <outlet property="DeviceImageView" destination="lnr-Ob-JH3" id="7QM-wj-LU6"/>
+                                                        <outlet property="DeviceType" destination="Zan-pj-5Tk" id="D9g-kd-3mb"/>
+                                                        <outlet property="deviceClickButton" destination="HHZ-OX-TER" id="qnA-sE-VdK"/>
                                                     </connections>
                                                 </collectionViewCell>
                                             </cells>
-                                            <connections>
-                                                <outlet property="dataSource" destination="6Pa-qi-2Kd" id="bBj-1i-I0C"/>
-                                                <outlet property="delegate" destination="6Pa-qi-2Kd" id="aep-Ih-wD8"/>
-                                            </connections>
                                         </collectionView>
                                     </subviews>
                                     <constraints>
@@ -180,7 +175,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="collectionView" destination="lFq-HO-fa7" id="d2n-4l-CnO"/>
+                                    <outlet property="collectionView" destination="lFq-HO-fa7" id="BLT-3y-BwF"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="datacell" rowHeight="324" id="V9g-UT-y6Y" customClass="RecipeTableViewCell" customModule="FoodPin" customModuleProvider="target">
@@ -266,6 +261,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Recipe book" id="dyU-1o-7Cc"/>
+                    <connections>
+                        <outlet property="mainScreenTableView" destination="eJP-48-EE4" id="GLR-NF-nM8"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="we6-Y1-DBb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
